feat:home画面とexpo routerの設定

--- a/ReadMaker/app.json
+++ b/ReadMaker/app.json
@@ -1,4 +1,13 @@
 {
-  "name": "ReadMaker",
-  "displayName": "ReadMaker"
+  "expo": {
+    "name": "ReadMaker",
+    "slug": "ReadMaker",
+    "scheme": "ReadMaker",
+    "web": {
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-router"
+    ]
+  }
 }
