--- a/ReadMaker/package.json
+++ b/ReadMaker/package.json
@@ -2,17 +2,22 @@
   "name": "ReadMaker",
   "version": "0.0.1",
   "private": true,
+  "main": "expo-router/entry",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "expo start ",
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native/new-app-screen": "0.80.2",
+    "expo-linear-gradient": "^14.1.5",
+    "expo-router": "^5.1.4",
+    "expo-status-bar": "^2.2.3",
     "react": "19.1.0",
-    "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native": "0.80.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
