feat: Vibrato形態素解析エンジン完全実装
 主要な実装完了:
- Vibrato v0.5統合（高速高品質形態素解析）
- IPADIC v2.7.0辞書セットアップ
- 実用的な形態素解析API実装
- JSON出力対応（React Native連携準備）
- エラーハンドリングフォールバック機能

 技術実装:
- vibrato_analyze_text()関数（メイン解析機能）
- analyze_text()公開API（自動フォールバック付き）
- zstd辞書展開ユーティリティ（extract_dict.rs）
- 辞書ファイル自動除外（.gitignore更新）

 ドキュメント:
- README.md全面更新（実装ステータス使用方法）
- DICTIONARY_SETUP.md追加（辞書セットアップガイド）

 動作検証:
- 複数テキストで正常動作確認済み
- フォールバックからVibratoへの移行完了
- JSONライブラリ統合完了

次のフェーズ: React Native bridgeパフォーマンス最適化

--- a/ReadMaker/native/rust/Cargo.toml
+++ b/ReadMaker/native/rust/Cargo.toml
@@ -1,6 +1,18 @@
 [package]
-name = "readmaker_core"
+name = "readmaker-rust"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+
+[[bin]]
+name = "main"
+path = "src/main.rs"
+
+[[bin]]
+name = "extract_dict"
+path = "extract_dict.rs"
 
 [dependencies]
+vibrato = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+zstd = "0.13"
