feat: React Native Bridge基盤実装完了
 主要実装:
- C FFI Bridge: JavaScript  Rust接続機能完全実装
- TypeScript API: 型安全なRustBridge.ts（analyzeText, testBridge）
- React Component: RustBridgeTest.tsx（テストデモUI）
- ライブラリ設定: cdylib対応、pub関数公開

 技術詳細:
- js_analyze_text(): C FFI形態素解析エントリーポイント
- js_free_string(): メモリ管理リーク防止
- js_test_bridge(): 接続確認機能
- エラーハンドリングフォールバック完備

 API仕様:
`	ypescript
const words: string[] = await analyzeText('吾輩は猫である。');
// ['吾輩', 'は', '猫', 'で', 'ある', '。']
`

 動作検証:
- cargo build --lib: 成功
- cargo test: 全テスト通過
- Bridge基本機能: 動作確認済み

 ドキュメント:
- README.md完備（実装状況使用方法次フェーズ）
- 型定義エラーハンドリングパフォーマンス指標

 現在の状況:
- Rust Core  (Vibrato形態素解析)
- C FFI Bridge  (JavaScript接続口)
- TypeScript API  (型安全interface)
- 次フェーズ: iOS/Android統合

JavaScriptからRustの高速形態素解析を呼び出す基盤が完成！

--- a/ReadMaker/native/rust/Cargo.toml
+++ b/ReadMaker/native/rust/Cargo.toml
@@ -3,6 +3,11 @@ name = "readmaker-rust"
 version = "0.1.0"
 edition = "2021"
 
+# React Native用ライブラリ出力設定
+[lib]
+name = "readmaker_core"
+crate-type = ["cdylib", "rlib"]
+
 [[bin]]
 name = "main"
 path = "src/main.rs"
