cleanup: drop kotlin bridge & novel

--- a/ReadMaker/native/rust/Cargo.toml
+++ b/ReadMaker/native/rust/Cargo.toml
@@ -16,6 +16,10 @@ path = "src/main.rs"
 name = "extract_dict"
 path = "extract_dict.rs"
 
+[[bin]]
+name = "test_bridge"
+path = "test_bridge.rs"
+
 [dependencies]
 vibrato = "0.5"
 serde = { version = "1.0", features = ["derive"] }
