Revert "[add] #3 sliderのパッケージインストール"
This reverts commit 400fd7bf20c4d3d3f5db1b833145573ddb19d12d.

--- a/ReadMaker/package.json
+++ b/ReadMaker/package.json
@@ -17,8 +17,7 @@
     "expo-router": "^5.1.4",
     "expo-status-bar": "^2.2.3",
     "react": "19.1.0",
-    "react-native": "0.80.2",
-    "@react-native-community/slider": "4.5.6"
+    "react-native": "0.80.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
