READMEの調整と簡潔化
- Rust READMEを大幅に簡潔化
- 冗長な機能説明やエラーハンドリング詳細を削除
- 基本機能、使い方、パフォーマンス情報のみに集約
- React Native bridge実装状況を正確に反映
- 開発者が必要な情報のみに絞って可読性向上

--- a/ReadMaker/native/rust/Cargo.toml
+++ b/ReadMaker/native/rust/Cargo.toml
@@ -26,6 +26,10 @@ name = "test_bridge"
 path = "test_bridge.rs"
 
 [[bin]]
+name = "benchmark"
+path = "src/benchmark.rs"
+
+[[bin]]
 name = "compile_dict"
 path = "src/compile_dict.rs"
 required-features = ["build-tools"]
