feat:ログイン機能の追加

--- a/backend/shared/Cargo.toml
+++ b/backend/shared/Cargo.toml
@@ -9,4 +9,5 @@ serde_json = { workspace = true }
 uuid = { workspace = true, features = ["v4", "serde"] }
 chrono = { workspace = true }
 sqlx = { workspace = true }
+jsonwebtoken = { workspace = true }
 thiserror = "1.0"
