--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@
 Thumbs.db
 .vscode/
 .idea/
-.env/
-.env.docker/
+# 環境設定ファイル (注意: 機密情報を含む可能性があるので、コミットしないように注意！)
+.env
+.env.docker
 # Large temporary artifacts (root)
 lex_utf8.csv
 *.vibrato
