--- a/ReadMaker/package.json
+++ b/ReadMaker/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native/new-app-screen": "0.80.2",
+    "axios": "^1.11.0",
     "expo-linear-gradient": "^14.1.5",
     "expo-router": "^5.1.4",
     "expo-status-bar": "^2.2.3",
