feat: Android向けRust製形態素解析エンジン統合完了
- NDK 27.1.12297006でクロスコンパイル成功
- 3つのABI対応: arm64-v8a(1.1MB), armeabi-v7a(0.7MB), x86_64(1.1MB)
- jniLibs配置APK同梱設定完了
- Java/TypeScriptブリッジ実装済み
- エミュレータ実機両対応
- ビルド済みライブラリ同梱でセットアップ不要

TypeScriptから高精度日本語解析が1行で利用可能:
const words = await analyzeText('今日は良い天気です。');
// -> ['今日', 'は', '良い', '天気', 'です', '。']

--- a/ReadMaker/android/app/build.gradle
+++ b/ReadMaker/android/app/build.gradle
@@ -85,6 +85,14 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    
+    // Rustライブラリの設定: 生成済みの *.so を src/main/jniLibs に配置して同梱
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
+    
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
