--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,10 +71,9 @@ services:
       dockerfile: Dockerfile
     container_name: readmaker_api
     restart: unless-stopped
+    env_file:
+      - .env.docker
     environment:
-      DATABASE_URL: postgresql://readmaker_user:readmaker_password@postgres:5432/readmaker
-      REDIS_URL: redis://redis:6379
-      JWT_SECRET: your_jwt_secret_here_change_in_production
       RUST_LOG: debug
       PORT: 3000
     ports:
