--- a/ReadMaker/package.json
+++ b/ReadMaker/package.json
@@ -13,16 +13,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native/new-app-screen": "0.80.2",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@types/react-native-fs": "^2.8.3",
     "axios": "^1.6.7",
     "expo-linear-gradient": "^14.1.5",
     "expo-router": "^5.1.4",
     "expo-secure-store": "^12.7.1",
     "expo-status-bar": "^2.2.3",
     "react": "19.1.0",
-    "react-native": "0.80.2"
+    "react-native": "0.80.2",
+    "react-native-fs": "^2.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
