--- a/ReadMaker/package.json
+++ b/ReadMaker/package.json
@@ -18,6 +18,7 @@
     "@react-native/new-app-screen": "0.80.2",
     "@types/react-native-fs": "^2.8.3",
     "axios": "^1.6.7",
+    "expo-file-system": "^18.1.11",
     "expo-linear-gradient": "^14.1.5",
     "expo-router": "^5.1.4",
     "expo-secure-store": "^12.7.1",
