Revert "feat: Vibrato形態素解析の堅牢化辞書管理改善"
This reverts commit 396d9135cc3fe0bdee2af63b3005dea34518df40.

--- a/ReadMaker/package.json
+++ b/ReadMaker/package.json
@@ -13,10 +13,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native/new-app-screen": "0.80.2",
-    "@types/react-native-fs": "^2.8.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "axios": "^1.6.7",
     "expo-file-system": "^18.1.11",
     "expo-linear-gradient": "^14.1.5",
@@ -24,8 +23,7 @@
     "expo-secure-store": "^12.7.1",
     "expo-status-bar": "^2.2.3",
     "react": "19.1.0",
-    "react-native": "0.80.2",
-    "react-native-fs": "^2.20.0"
+    "react-native": "0.80.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
