feat: Rustベースのテキスト解析機能の統合とAndroidビルドの修正

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ backend/Cargo.lock
 
 # Development tool caches
 .serena/cache/
+
+# Node modules
+node_modules/
+ReadMaker/node_modules/
+
+# Rust build configuration
+ReadMaker/native/rust/.cargo/
